--- a/makersBnB/Gemfile
+++ b/makersBnB/Gemfile
@@ -1,5 +1,5 @@
 source 'https://rubygems.org'
-
+gem 'devise'
 gem "factory_girl_rails", "~> 4.0"
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.2.6'
